# direct2d-window

./: Cargo.toml
examples/: basic_window.rs
src/: error.rs  event.rs  lib.rs  window.rs
src/builder/: mod.rs  styles.rs
src/internals/: data.rs  dpi.rs  mod.rs  target.rs  win32_helpers.rs  wndproc.rs
tests/: create_a_window.rs
